[package]
name = "nya"
version = "0.1.0"
authors = ["Chandler Newman <chandler2newman@hotmail.co.uk>"]
edition = "2021"

[lib]
name = "nss_nya" # This is the name of the library that will be loaded by NSS
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.132"
lazy_static = "1.4.0"
paste = "1"
libnss = { path = "../libnss" }
